@@ -9,7 +9,8 @@ Changes in JMurmel-1.5.0 relative to JMurmel-1.4.8
 
  * added fresh-line, make-string-writer, tabulate
 
- * mlib: added format, formatter, error, and*, or*
+ * mlib: added format, formatter, error, and*, or*, frequencies
+ * fixed mlib: "(incf (gethash..." with default value
 
 
 Changes in JMurmel-1.4.8 relative to JMurmel-1.4.7
